# my-telemetry-ui

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  build.rs
.github/workflows/: release.yml
assets/: app.js
files/: app.css
proto/: TelemetryReader.proto
src/: http_server.rs  main.rs  router.rs  settings.rs  static_resources.rs  utils.rs
src/api_client/: get_by_process_id.rs  get_by_service_data.rs  get_list_of_services.rs  get_services_overview.rs  mod.rs
src/app_ctx/: app_ctx.rs
src/components/: envs_selector.rs  mod.rs  select_hour_key.rs
src/grpc_client/: mod.rs  telemetry_reader_grpc_client.rs
src/models/: metric_http_model.rs  metrics_file_http_model.rs  mod.rs  service_data_http_model.rs  tag_api_model.rs  time.rs
src/server/: mod.rs  settings.rs
src/server/api_client/: calc_hour_key.rs  get_by_process_id.rs  get_by_service_data.rs  get_list_of_services.rs  get_services_overview.rs  mod.rs
src/server/app_ctx/: app_ctx.rs  grpc_service_settings.rs  mod.rs
src/server/grpc_client/: telemetry_reader_grpc_client.rs
src/states/: available_files.rs  data_state.rs  dialog_state.rs  envs.rs  main_state.rs  mod.rs  right_panel_state.rs
src/storage/: client_id.rs  from_time.rs  hours_ago.rs  mod.rs
src/views/: bottom_panel.rs  envs_selector.rs  left_panel.rs  mod.rs  process_overview.rs  right_panel.rs  service_data_overview.rs  service_overview.rs  top_panel.rs
src/views/dialog/: mod.rs  render.rs  show_key_value.rs
