[package]
name = "my-telemetry-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
ssr = [
    "dioxus-fullstack/salvo",
    "flurl",
    "rust-extensions",
    "my-logger",
    "my-grpc-extensions",
    "tokio",
    "tonic",
    "async-trait",
    "anyhow",
    "prost",
    "prost-types",
    "futures",
    "lazy_static",
    "serde_json",
    "serde_yaml",

]
web = ["dioxus-fullstack/web"]

[dependencies]

flurl = { tag = "0.4.0", git = "https://github.com/MyJetTools/fl-url.git", optional = true }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git", optional = true }
my-logger = { tag = "1.0.2", git = "https://github.com/MyJetTools/my-logger.git", optional = true }

my-grpc-extensions = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git", features = [
    "grpc-client",
], optional = true }


dioxus-fullstack = { version = "*", features = ["router"] }
dioxus = { version = "*" }
dioxus-router-macro = "*"
dioxus-router = "*"
dioxus-web = "*"
serde = "*"
chrono = "*"


tokio = { version = "*", features = ["full"], optional = true }
serde_json = { version = "*", optional = true }
serde_yaml = { version = "*", optional = true }
futures = { version = "*", optional = true }
tonic = { version = "*", features = [
    "tls",
    "tls-roots",
    "prost",
], optional = true }
anyhow = { version = "*", optional = true }
prost = { version = "*", optional = true }
prost-types = { version = "*", optional = true }
async-trait = { version = "*", optional = true }
lazy_static = { version = "*", optional = true }
base64 = { version = "*" }


[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
