[package]
name = "my-telemetry-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
server = [
    "dioxus/axum",
    "my-logger",
    "my-grpc-extensions",
    "tokio",
    "tonic",
    "async-trait",
    "anyhow",
    "prost",
    "prost-types",
    "futures",
    "lazy_static",
    "serde_json",
    "serde_yaml",

]
web = ["dioxus/web"]

[dependencies]

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "base64",
] }
my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git", optional = true }

my-grpc-extensions = { tag = "0.6.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git", features = [
    "grpc-client",
], optional = true }


dioxus = { version = "0.5.1", features = ["fullstack", "router"] }
serde = "*"
chrono = "*"


tokio = { version = "*", features = ["full"], optional = true }
serde_json = { version = "*", optional = true }
serde_yaml = { version = "*", optional = true }
futures = { version = "*", optional = true }
tonic = { version = "*", features = [
    "tls",
    "tls-roots",
    "prost",
], optional = true }
anyhow = { version = "*", optional = true }
prost = { version = "*", optional = true }
prost-types = { version = "*", optional = true }
async-trait = { version = "*", optional = true }
lazy_static = { version = "*", optional = true }
base64 = { version = "*" }


[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
